fix(project): prevent too small modals

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -23,5 +23,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 320px;
   height: 100%;
 }
